import { parseCertificate } from "./cert";

const c0_ec = `-----BEGIN CERTIFICATE-----
MIIBCTCBsAIJAI1GxVa/1o2pMAoGCCqGSM49BAMCMA0xCzAJBgNVBAMMAkNBMB4X
DTE5MDYxMTEzMjY1MloXDTE5MDcxMTEzMjY1MlowDTELMAkGA1UEAwwCRUUwWTAT
BgcqhkjOPQIBBggqhkjOPQMBBwNCAATCMoLhT+10QEHpcbu6k+koYhLBeEy8bUIH
RBXo0W29fDUDCRHus3NixkbxcarGxaLmhvwYFgQdbgaGjKx8IJLzMAoGCCqGSM49
BAMCA0gAMEUCIGISk7evLWaZKX7nANauKrJLTRCIbdB9O/CNNvGqYwAVAiEA9iNY
Vi+TkGrcl2TUe4a0xM0vTunzBgV+/jSoJsSWGkM=
-----END CERTIFICATE----- `;

const c1 = `MIIGazCCBFOgAwIBAgIISUvdceh9stEwDQYJKoZIhvcNAQELBQAwgZQxCzAJBgNV
BAYTAklUMQ4wDAYDVQQIEwVJdGFseTEOMAwGA1UEBxMFTWlsYW4xETAPBgNVBAoT
CENoZUJhbmNhMRIwEAYDVQQLEwlTaWN1cmV6emExGDAWBgNVBAMTD0RFViBDaGVC
YW5jYSBDQTEkMCIGCSqGSIb3DQEJARYVc2ljdXJlenphQGNoZWJhbmNhLml0MB4X
DTE5MDMwNTE0MDcwMFoXDTI4MDMwNTE0MDcwMFowgYcxGDAWBgNVBGEMD1BTRElU
LUNCLTAwMDAwMDELMAkGA1UEBgwCSVQxFzAVBgNVBAMMDkNCIFRQUCBTQU5EQk9Y
MQwwCgYDVQQLDANUUFAxFzAVBgNVBAoMDkNCIFRQUCBTQU5EQk9YMQ4wDAYDVQQI
DAVJdGFseTEOMAwGA1UEBwwFTWlsYW4wggIiMA0GCSqGSIb3DQEBAQUAA4ICDwAw
ggIKAoICAQC3doBPCwtOlHDBhFDBdEM5b8bQgCJnAsiz0qdFWxkTuWTG6lXA6zTh
RUUqVCnb0pNVQt9o96lJ+DT/htKfxQTCIIMqVi5bgXTD2ZBJRBOOWV4avEG9J0LR
KVzxmN+s4DQvcCKSGZ6dNelRFhtHi6xIuVqvp6ldHdE1MlH+osP1A1PeFJ4wuaLz
zatO3rI/f+UaAuIb0y4sGdxHODcP/tuHCYxi55kAV+5BxntjJNO1FNFINvjNH1hC
+Kxyjn7bGgTxaGqo9AplXe653BEQsPhOdh12E3hR5FRuqqGzcVpDQo/Q/xtaaV/Z
Qeqck4gdV0Nn8HpOuoq+Ssizolyi0cMyyQzhERHFtDy4Zs5QM51vica+hrMpJQhE
Pda7ZVXLewTBSC2XowdAtbFmILnvk6/AkbxFOWx7ESA3SiNixv9Slh5F0g9Ste8C
4WgasOZwAt2a3gKYxM//uVvyZEBzi2dg5Wjv7yfo/fnSFrRS3asi153KaHMP4CKy
NyQ7ZCDXHsAdBrbBXUvpopAHfgxNXNh6mSW8X10NFgF+yrIlnvOL67juvv4y5GLs
9Ee/T4GriCi0KBwqBp1EcGIVO8JuFlMEQmyBIUmiX44Smv+zl0+ptqQWvdJDy+hw
ieBd6tbBUr+hhzlZCrXU9EKIJDrjZzSXN1JLRK1E3QmLBCg2M/4pCQIDAQABo4HL
MIHIMAsGA1UdDwQEAwIBxjAdBgNVHSUEFjAUBggrBgEFBQcDAgYIKwYBBQUHAwEw
EQYDVR0RBAowCIIGdHBwLml0MIGGBggrBgEFBQcBAwR6MHgwCAYGBACORgEBMAsG
BgQAjkYBAwIBFDAIBgYEAI5GAQQwEwYGBACORgEGMAkGBwQAjkYBBgMwQAYGBACB
mCcCMDYwJjARBgcEAIGYJwEDDAZQU1BfQUkwEQYHBACBmCcBAgwGUFNQX1BJDAhD
aGVCYW5jYQwCQ0IwDQYJKoZIhvcNAQELBQADggIBAGA6JHa3E5+xgZAWMUO5Mg0u
0tKTSLFCjGhnhORvqlSYDtFVYRYixFARxvJrn2rtBCMl+1VIq2x0ZrkPQ03s/10w
jhrKuJ0yDX9mgxWDNGdDq/QXLOnCm7Ly0egOqb4a0TkvJJToCL74y55Xj7CPgGxp
lQjnsOesCc/Z/SJPB5gHRQ8PClYoHZy5qWtHWXeRNzRZGruU30sHYgmWrajwtWKy
FuPbhpN7Sx9L/LsG5SQj8s5R6Xqv8pe6RrJCiOmjXsnlIDpmu7L5WlldovNGubAt
b+EqtNMiLzsuguUNWsFjzBn2Hu5PhQ1DH36kRdPRbHK3Tcm/kMXLKwxCFIN9CA4v
O9PE7YZD6Hlvx3xqsbVgZkFrFHjQSgCNyHraH/gbZIwQ/UNkFxs2e0Pfcraegbhu
JarXqDVJnNVM6Kcoqm24ppG05bjzNwd8uPmL50ceD1cxmn54Dro34kJPbuQ/ZrEt
m+XHiiv4rQyIJKvEmeZeK+44q5IcFmBLKhDn1Tc9PR+iB6encnQQtFtnr5NwyLjV
mHiiX8uciIDSXOfqW9toLLKlJ2KII+o4Qhe0H1mKSTZ2ecgS+IT4HHQZEW+DMQ/I
MKh4pIAOasqKbd53deOvUSpSSnhORzVLJwQLhg8VmRzSR5T9V13ad/ptbv37dBFp
P0VbDxUMTGrdMmK2BJuq`;

//eslint-disable-next-line
const c2 = `MIIC2jCCAkMCAg38MA0GCSqGSIb3DQEBBQUAMIGbMQswCQYDVQQGEwJKUDEOMAwG
A1UECBMFVG9reW8xEDAOBgNVBAcTB0NodW8ta3UxETAPBgNVBAoTCEZyYW5rNERE
MRgwFgYDVQQLEw9XZWJDZXJ0IFN1cHBvcnQxGDAWBgNVBAMTD0ZyYW5rNEREIFdl
YiBDQTEjMCEGCSqGSIb3DQEJARYUc3VwcG9ydEBmcmFuazRkZC5jb20wHhcNMTIw
ODIyMDUyNzQxWhcNMTcwODIxMDUyNzQxWjBKMQswCQYDVQQGEwJKUDEOMAwGA1UE
CAwFVG9reW8xETAPBgNVBAoMCEZyYW5rNEREMRgwFgYDVQQDDA93d3cuZXhhbXBs
ZS5jb20wggEiMA0GCSqGSIb3DQEBAQUAA4IBDwAwggEKAoIBAQC0z9FeMynsC8+u
dvX+LciZxnh5uRj4C9S6tNeeAlIGCfQYk0zUcNFCoCkTknNQd/YEiawDLNbxBqut
bMDZ1aarys1a0lYmUeVLCIqvzBkPJTSQsCopQQ9V8WuT252zzNzs68dVGNdCJd5J
NRQykpwexmnjPPv0mvj7i8XgG379TyW6P+WWV5okeUkXJ9eJS2ouDYdR2SM9BoVW
+FgxDu6BmXhozW5EfsnajFp7HL8kQClI0QOc79yuKl3492rH6bzFsFn2lfwWy9ic
7cP8EpCTeFp1tFaD+vxBhPZkeTQ1HKx6hQ5zeHIB5ySJJZ7af2W8r4eTGYzbdRW2
4DDHCPhZAgMBAAEwDQYJKoZIhvcNAQEFBQADgYEAQMv+BFvGdMVzkQaQ3/+2noVz
/uAKbzpEL8xTcxYyP3lkOeh4FoxiSWqy5pGFALdPONoDuYFpLhjJSZaEwuvjI/Tr
rGhLV1pRG9frwDFshqD2Vaj4ENBCBh6UpeBop5+285zQ4SI7q4U9oSebUDJiuOx6
+tZ9KynmrbJpTSi0+BM=`;

describe("crypto/cert", () => {
	test("cert 1", () => {
		const { buffer, ...asn } = parseCertificate(c0_ec); // eslint-disable-line no-unused-vars
		expect(asn).toMatchSnapshot();
	});

	test("cert 2", () => {
		const { buffer, ...asn } = parseCertificate(c1); // eslint-disable-line no-unused-vars
		expect(asn).toMatchSnapshot();
	});

	test("cert 3", () => {
		const { buffer, ...asn } = parseCertificate(c2); // eslint-disable-line no-unused-vars
		expect(asn).toMatchSnapshot();
	});
});
